# fastapi-do-zero

./: pyproject.toml
fast_zero/: app.py  security.py
migrations/: env.py
migrations/versions/: 5901113c8d01_create_users_table.py
tests/: conftest.py  test_app.py
