[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Wesley Júnior <agarwesley19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.1.1"
httpx = "^0.25.0"
isort = "^5.12.0"


[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']


[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']


[tool.pytest.ini_options]
pythonpath = "."


[tool.blue]
extend-exclude = '(migrations/)'


[tool.taskipy.tasks]
test = 'pytest -s -x --cov=fast_zero -vv'
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn fast_zero.app:app --reload'
pre_test = 'task lint'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
